--- a/app/src/main/res/values/userpreferences.xml
+++ b/app/src/main/res/values/userpreferences.xml
@@ -24,6 +24,8 @@
   <string name="userprefs_group_gestures">Gestures</string>
   <string name="userprefs_customize_submission_gestures">Submission gesture actions</string>
   <string name="userprefs_customize_comment_gestures">Comment gesture actions</string>
+  <string name="userprefs_gestures_summary_disabled">Disabled</string>
+  <string name="userprefs_gestures_summary_last_separator">and</string>
 
   <string name="userprefs_gestures_group_left">Left</string>
   <string name="userprefs_gestures_group_right">Right</string>
