Change titles of action groups

--- a/app/src/main/res/values/userpreferences.xml
+++ b/app/src/main/res/values/userpreferences.xml
@@ -27,8 +27,8 @@
   <string name="userprefs_gestures_summary_disabled">Disabled</string>
   <string name="userprefs_gestures_summary_last_separator">and</string>
 
-  <string name="userprefs_gestures_group_left">Left</string>
-  <string name="userprefs_gestures_group_right">Right</string>
+  <string name="userprefs_gestures_group_swipe_start_to_end">Swipe left to right</string>
+  <string name="userprefs_gestures_group_swipe_end_to_start">Swipe right to left</string>
 
   <string name="userprefs_group_messaging">Messaging</string>
   <string name="userprefs_check_for_new_messages">Poll for new messages</string>
